multiturn and streaming chat impl